--- a/wp-content/themes/wp-dashboard/html/src/index.html
+++ b/wp-content/themes/wp-dashboard/html/src/index.html
@@ -24,9 +24,12 @@
     <header>
 
 	</header>
-    
 
-	
+	<aside>
+
+	</aside>
+
+
     <script src="./assets/js/custom.js"></script>
 </body>
 </html>
