zakl. sabl. nav.

--- a/wp-content/themes/wp-dashboard/html/src/index.html
+++ b/wp-content/themes/wp-dashboard/html/src/index.html
@@ -48,41 +48,71 @@
 	</header>
 
 	<div class="flex h-screen">		
-		<aside class="nav-wrap hidden fixed left-0 top-12 z-10 lg:flex flex-col w-full lg:w-60 pt-16 h-screen bg-secondary text-white">
-			<div class="over">
-				<ul class="left-nav">
-					<li><a href="#">Aktuality</a></li>
-					<li><a href="#">Zamestnanecký portál</a></li>
-					<li><a href="#">Onboarding</a></li>
-					<li><a href="#">Užitočné informácie</a>
-						<ul>
-							<li><a href="#">Dovolenky</a></li>
-							<li><a href="#">Vnútorný predpis</a></li>
-							<li><a href="#">Cestovný príkaz - postup</a></li>
-							<li><a href="#">Služobné cesty</a></li>
-							<li><a href="#">Info o spracovaní osobných údajov</a></li>
-							<li><a href="#">Edumio školenia</a></li>
-							<li><a href="#">Potvrdenia pre zamestnancov</a></li>
-							<li><a href="#">Formy stravovania - dotazník</a></li>
-							<li><a href="#">Multisport karty</a></li>
-							<li><a href="#">Eset licencia</a></li>
-							<li><a href="#">Office 365</a></li>
-							<li><a href="#">Odkúpenie hw</a></li>
-							<li><a href="#">Referral program</a></li>
-							<li><a href="#">Užitočné kontakty</a></li>
+		<aside class="nav-wrap fixed left-0 top-12 z-10 lg:flex flex-col w-full lg:w-60 lg:pt-10 h-screen bg-secondary text-white">
+			<div class="sub-nav-wrap w-[200%] flex lg:w-full">
+				<div class="flex-1">
+					<!--<form class="mt-5 mb-2 mx-4" action="/">
+						<input class="w-full py-2 pl-5 pr-20 border-primary focus:border-quaternary focus:ring-primary bg-green rounded-full text-lg bg-[url('/assets/img/icn-search.svg')] bg-no-repeat bg-right bg-[length:60px_30px]" type="text" placeholder="čo hľadáte?">
+					</form>-->
+
+					<ul class="left-nav lg:pt-5">
+						<li><a href="#">Aktuality</a></li>
+						<li><a href="#">Zamestnanecký portál</a></li>
+						<li><a href="#">Onboarding</a></li>
+						<li><a href="#">Užitočné informácie</a>
+							<ul>
+								<li><a href="#">Dovolenky</a></li>
+								<li><a href="#">Vnútorný predpis</a></li>
+								<li><a href="#">Cestovný príkaz - postup</a></li>
+								<li><a href="#">Služobné cesty</a></li>
+								<li><a href="#">Info o spracovaní osobných údajov</a></li>
+								<li><a href="#">Edumio školenia</a></li>
+								<li><a href="#">Potvrdenia pre zamestnancov</a></li>
+								<li><a href="#">Formy stravovania - dotazník</a></li>
+								<li><a href="#">Multisport karty</a></li>
+								<li><a href="#">Eset licencia</a></li>
+								<li><a href="#">Office 365</a></li>
+								<li><a href="#">Odkúpenie hw</a></li>
+								<li><a href="#">Referral program</a></li>
+								<li><a href="#">Užitočné kontakty</a></li>
+							</ul>
+						</li>
+						<li><a href="#">Zoho</a>
+							<ul>
+								<li><a href="#">ZOHO manuál + info o zohosupport</a></li>
+								<li><a href="#">Manuály pre adminov</a></li>
+							</ul>
+						</li>
+						<li><a href="#">Vzdelávanie</a></li>
+						<li><a href="#">Benefity</a></li>
+						<li><a href="#">Teambuildingy</a></li>
+						<li><a href="#">AA bazoš</a></li>
+					</ul>
+
+					<div class="lg:hidden mt-2 px-4">
+						<hr>
+					</div>
+
+					<ul class="left-nav lg:hidden">
+						<li><a href="#">Odhlásiť</a></li>
+					</ul>
+				</div>
+
+				<div class="flex-1 lg:hidden overflow-auto h-screen">
+					<div class="pt-5 pb-5 px-4">
+						<a class="js-back-mob-nav inline-flex mb-4 text-xl" href="javascript:void(0);">
+							<img src="./assets/img/arrow-full-right-medium.svg" width="30" height="20" alt="arrow white right" style="transform: rotate(180deg);">
+							
+							<span class="flex ml-2">Späť</span>
+						</a>
+
+						<hr class="mb-4">
+
+						<ul class="js-mob-sub-nav">
+
 						</ul>
-					</li>
-					<li><a href="#">Zoho</a>
-						<ul>
-							<li><a href="#">ZOHO manuál + info o zohosupport</a></li>
-							<li><a href="#">Manuály pre adminov</a></li>
-						</ul>
-					</li>
-					<li><a href="#">Vzdelávanie</a></li>
-					<li><a href="#">Benefity</a></li>
-					<li><a href="#">Teambuildingy</a></li>
-					<li><a href="#">AA bazoš</a></li>
-				</ul>
+					</div>
+				</div>
 			</div>
 		</aside>
 
@@ -108,6 +138,21 @@
 						</article>
 					</div>
 
+					<div class="w-full sm:w-1/2 lg:w-1/3 mb-4 px-2 lg:invisible">
+						<article class="h-full bg-secondary p-4 rounded-lg text-white">
+							<figure>
+								<a href="#">
+									<img class="rounded-lg" src="./assets/img/caoursel2.jpg" alt="">
+								</a>
+							</figure>
+
+							<div class="pt-4">
+								<span class="text-sm text-green"><a class="hover:border-b border-green" href="#">Raňajky info</a></span>
+								<h2 class="text-xl lg:text-3xl"><a class="hover:underline focus:text-green" href="#">Raňajky v štýle indickej kuchyne.</a></h2>
+							</div>
+						</article>
+					</div>
+
 					<div class="w-full sm:w-1/2 lg:w-1/3 mb-4 px-2">
 						<article class="h-full bg-secondary p-4 rounded-lg text-white">
 							<figure>
@@ -119,21 +164,6 @@
 							<div class="pt-4">
 								<span class="text-sm text-green"><a class="hover:border-b border-green" href="#">TB info</a></span>
 								<h2 class="text-xl lg:text-3xl"><a class="hover:underline focus:text-green" href="#">Najbližšie sa stretneme na lezeckej stene.</a></h2>
-							</div>
-						</article>
-					</div>
-
-					<div class="w-full sm:w-1/2 lg:w-1/3 mb-4 px-2">
-						<article class="h-full bg-secondary p-4 rounded-lg text-white">
-							<figure>
-								<a href="#">
-									<img class="rounded-lg" src="./assets/img/caoursel2.jpg" alt="">
-								</a>
-							</figure>
-
-							<div class="pt-4">
-								<span class="text-sm text-green"><a class="hover:border-b border-green" href="#">Raňajky info</a></span>
-								<h2 class="text-xl lg:text-3xl"><a class="hover:underline focus:text-green" href="#">Raňajky v štýle indickej kuchyne.</a></h2>
 							</div>
 						</article>
 					</div>
@@ -222,7 +252,7 @@
 				<footer class="mt-auto pt-10 pb-4">
 					<hr class="mb-4">
 
-					<p class="text-gray-400"> Aardwark 2022 &copy; Špecialisti na Enterprise IT riešenia</p>
+					<p class="text-gray-400"> Aardwark 2022 <span class="block lg:inline">&copy; Špecialisti na Enterprise IT riešenia</span></p>
 				</footer>
 			</div>
 		</main>
