--- a/wp-content/themes/wp-dashboard/html/src/bazar.html
+++ b/wp-content/themes/wp-dashboard/html/src/bazar.html
@@ -10,7 +10,7 @@
 	<link rel="icon" type="image/png" sizes="32x32" href="./assets/img/favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="./assets/img/favicon-16x16.png">
 
-	<title>Intranet | Aardwark</title>
+	<title>Bazar | Aardwark</title>
 
 	<meta name="robots" content="noindex,nofollow">
 
@@ -48,12 +48,12 @@
 	</header>
 
 	<div class="flex h-screen">		
-		<aside class="nav-wrap fixed left-0 top-12 z-10 lg:flex flex-col w-full lg:w-60 lg:pt-10 h-screen bg-secondary text-white">
+        <aside class="nav-wrap fixed left-0 top-12 z-10 lg:flex flex-col w-full lg:w-60 lg:pt-10 h-screen bg-secondary text-white">
 			<div class="sub-nav-wrap w-[200%] flex lg:w-full">
 				<div class="flex-1">
-					<!--<form class="mt-5 mb-2 mx-4" action="/">
-						<input class="w-full py-2 pl-5 pr-20 border-primary focus:border-quaternary focus:ring-primary bg-green rounded-full text-lg bg-[url('/assets/img/icn-search.svg')] bg-no-repeat bg-right bg-[length:60px_30px]" type="text" placeholder="čo hľadáte?">
-					</form>-->
+					<form class="mt-5 mb-2 mx-4" action="/">
+						<input class="w-full py-2 pl-5 pr-20 border-white focus:border-quaternary focus:ring-primary bg-green rounded-full text-lg bg-[url('/assets/img/icn-search.svg')] bg-no-repeat bg-right bg-[length:60px_30px]" type="text" placeholder="čo hľadáte?">
+					</form>
 
 					<ul class="left-nav lg:pt-5">
 						<li><a href="#">Aktuality</a></li>
@@ -118,41 +118,9 @@
 
 		<main class="flex-1 lg:ml-60 px-4 lg:px-8 pt-20">
 			<div class="container flex flex-col">
-				<form class="lg:mt-5 mb-5 lg:mb-10" action="#">
-					<input class="w-full max-w-md py-4 pl-5 pr-20 border-primary focus:border-quaternary focus:ring-primary bg-green rounded-full text-2xl bg-[url('/assets/img/icn-search.svg')] bg-no-repeat bg-right bg-[length:80px_40px]" type="text" placeholder="čo hľadáte?">
-				</form>
+                <h1 class="lg:mt-5 mb-8 text-primary text-3xl lg:text-6xl">Bazár</h1>
 
 				<div class="flex flex-wrap -mx-2 mb-8">
-					<div class="w-full sm:w-1/2 lg:w-2/3 mb-4 px-2 hover:drop-shadow-xl hover:-translate-y-1 transition-transform duration-500">
-						<article class="h-full bg-quaternary p-4 rounded-lg text-white">
-							<figure>
-								<a href="#">
-									<img class="w-full rounded-lg object-cover" src="./assets/img/og-image.jpg" height="192" alt="" style="height: 227px;">
-								</a>
-							</figure>
-
-							<div class="pt-4">
-								<span class="text-sm text-green"><a class="hover:border-b border-green" href="#">TB info</a></span>
-								<h2 class="text-xl lg:text-3xl"><a class="hover:underline focus:text-green" href="#">Celofiremná akcia už čoskoro.</a></h2>
-							</div>
-						</article>
-					</div>
-
-					<div class="w-full sm:w-1/2 lg:w-1/3 mb-4 px-2 lg:invisible hover:drop-shadow-xl hover:-translate-y-1 transition-transform duration-500">
-						<article class="h-full bg-secondary p-4 rounded-lg text-white">
-							<figure>
-								<a href="#">
-									<img class="rounded-lg" src="./assets/img/caoursel2.jpg" alt="">
-								</a>
-							</figure>
-
-							<div class="pt-4">
-								<span class="text-sm text-green"><a class="hover:border-b border-green" href="#">Raňajky info</a></span>
-								<h2 class="text-xl lg:text-3xl"><a class="hover:underline focus:text-green" href="#">Raňajky v štýle indickej kuchyne.</a></h2>
-							</div>
-						</article>
-					</div>
-
 					<div class="w-full sm:w-1/2 lg:w-1/3 mb-4 px-2 hover:drop-shadow-xl hover:-translate-y-1 transition-transform duration-500">
 						<article class="h-full bg-secondary p-4 rounded-lg text-white">
 							<figure>
@@ -162,68 +130,23 @@
 							</figure>
 
 							<div class="pt-4">
-								<span class="text-sm text-green"><a class="hover:border-b border-green" href="#">TB info</a></span>
-								<h2 class="text-xl lg:text-3xl"><a class="hover:underline focus:text-green" href="#">Najbližšie sa stretneme na lezeckej stene.</a></h2>
-							</div>
-						</article>
-					</div>
-
-					<div class="w-full sm:w-1/2 lg:w-1/3 mb-4 px-2 hover:drop-shadow-xl hover:-translate-y-1 transition-transform duration-500">
-						<article class="h-full bg-secondary p-4 rounded-lg text-white">
-							<figure>
-								<a href="#">
-									<img class="rounded-lg" src="./assets/img/caoursel3.jpg" alt="">
-								</a>
-							</figure>
-
-							<div class="pt-4">
-								<span class="text-sm text-green"><a class="hover:border-b border-green" href="#">Dovolenky info</a></span>
-								<h2 class="text-xl lg:text-3xl"><a class="hover:underline focus:text-green" href="#">Celozávodná dovolenka tento rok nebude.</a></h2>
+								<h2 class="text-xl lg:text-3xl"><a class="hover:underline focus:text-green" href="#">Monitor DELL 1920x1028px</a></h2>
 							</div>
 						</article>
 					</div>
 
 					<div class="w-full sm:w-1/2 lg:w-1/3 mb-4 px-2 hover:drop-shadow-xl hover:-translate-y-1 transition-transform duration-500">
 						<article class="h-full bg-quaternary p-4 rounded-lg text-white">
-							<figure>
-								<a href="#">
-									<img class="rounded-lg" src="./assets/img/caoursel2.jpg" alt="">
-								</a>
-							</figure>
+							<figure class="relative">
+                                <span class="absolute right-2 top-2 py-1 px-4 bg-green rounded-md text-black uppercase tracking-wide font-bold">rezervované</span>
 
-							<div class="pt-4">
-								<span class="text-sm text-green"><a class="hover:border-b border-green" href="#">Office info</a></span>
-								<h2 class="text-xl lg:text-3xl"><a class="hover:underline focus:text-green" href="#">Tento týždeň upratujú devopsáci.</a></h2>
-							</div>
-						</article>
-					</div>
-
-					<div class="w-full sm:w-1/2 lg:w-1/3 mb-4 px-2 hover:drop-shadow-xl hover:-translate-y-1 transition-transform duration-500">
-						<article class="h-full bg-secondary p-4 rounded-lg text-white">
-							<figure>
 								<a href="#">
 									<img class="rounded-lg" src="./assets/img/caoursel3.jpg" alt="">
 								</a>
 							</figure>
 
 							<div class="pt-4">
-								<span class="text-sm text-green"><a class="hover:border-b border-green" href="#">Dovolenky info</a></span>
-								<h2 class="text-xl lg:text-3xl"><a class="hover:underline focus:text-green" href="#">Celozávodná dovolenka tento rok nebude.</a></h2>
-							</div>
-						</article>
-					</div>
-
-					<div class="w-full sm:w-1/2 lg:w-1/3 mb-4 px-2 hover:drop-shadow-xl hover:-translate-y-1 transition-transform duration-500">
-						<article class="h-full bg-quaternary p-4 rounded-lg text-white">
-							<figure>
-								<a href="#">
-									<img class="rounded-lg" src="./assets/img/caoursel2.jpg" alt="">
-								</a>
-							</figure>
-
-							<div class="pt-4">
-								<span class="text-sm text-green"><a class="hover:border-b border-green" href="#">Raňajky info</a></span>
-								<h2 class="text-xl lg:text-3xl"><a class="hover:underline focus:text-green" href="#">Raňajky v štýle indickej kuchyne.</a></h2>
+								<h2 class="text-xl lg:text-3xl"><a class="hover:underline focus:text-green" href="#">iMac 24</a></h2>
 							</div>
 						</article>
 					</div>
@@ -237,16 +160,10 @@
 							</figure>
 
 							<div class="pt-4">
-								<span class="text-sm text-green"><a class="hover:border-b border-green" href="#">Office info</a></span>
-								<h2 class="text-xl lg:text-3xl"><a class="hover:underline focus:text-green" href="#">Tento týždeň upratujú devopsáci.</a></h2>
+								<h2 class="text-xl lg:text-3xl"><a class="hover:underline focus:text-green" href="#">iMac 27</a></h2>
 							</div>
 						</article>
 					</div>
-				</div>
-
-				<div class="flex justify-between items-center py-4 mb-20">
-					<a href="#">Predošlé</a>
-					<a href="#">Ďalšie</a>
 				</div>
 
 				<footer class="mt-auto pt-10 pb-4">
