aktivna menu polozka

--- a/wp-content/themes/wp-dashboard/html/src/index.html
+++ b/wp-content/themes/wp-dashboard/html/src/index.html
@@ -59,12 +59,12 @@
 						<li><a href="#">Aktuality</a></li>
 						<li><a href="#">Zamestnanecký portál</a></li>
 						<li><a href="#">Onboarding</a></li>
-						<li><a href="#">Užitočné informácie</a>
+						<li class="current-menu-parent"><a href="#">Užitočné informácie</a>
 							<ul>
 								<li><a href="#">Dovolenky</a></li>
 								<li><a href="#">Vnútorný predpis</a></li>
 								<li><a href="#">Cestovný príkaz - postup</a></li>
-								<li><a href="#">Služobné cesty</a></li>
+								<li class="current-menu-item"><a href="#">Služobné cesty</a></li>
 								<li><a href="#">Info o spracovaní osobných údajov</a></li>
 								<li><a href="#">Edumio školenia</a></li>
 								<li><a href="#">Potvrdenia pre zamestnancov</a></li>
