--- a/wp-content/themes/wp-dashboard/html/src/index.html
+++ b/wp-content/themes/wp-dashboard/html/src/index.html
@@ -56,7 +56,7 @@
 					</form>-->
 
 					<ul class="left-nav lg:pt-5">
-						<li class="current-menu-item"><a href="#">Aktuality</a></li>
+						<li><a href="#">Aktuality</a></li>
 						<li><a href="#">Zamestnanecký portál</a></li>
 						<li><a href="#">Onboarding</a></li>
 						<li class="current-menu-parent"><a href="#">Užitočné informácie</a>
