--- a/wp-content/themes/wp-dashboard/html/src/index.html
+++ b/wp-content/themes/wp-dashboard/html/src/index.html
@@ -21,7 +21,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,400;0,600;1,400;1,600&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header class="fixed top-0 left-0 z-20 flex w-full bg-quaternary h-12 text-white">
+    <header class="fixed top-0 left-0 z-20 flex w-full bg-gray-300 h-12 text-white">
 		<div class="flex justify-between lg:justify-center items-center w-full lg:w-60 p-3 bg-primary">
 			<a href="#"><img src="./assets/img/logo.svg" width="160" height="50" alt=""></a>
 
@@ -36,19 +36,19 @@
 
 		<div class="hidden lg:flex flex-1 justify-between items-center">
 			<div class="flex px-8">
-				<p>Vitajte <strong>Peter Stehlík</strong></p>
+				<p class="text-primary">Vitajte <strong>Peter Stehlík</strong></p>
 			</div>
 
 			<div class="h-full">
 				<div class="h-full">
-					<a class="flex justify-center items-center h-full px-4 bg-primary hover:bg-secondary" href="#">Odhlásiť sa</a>
+					<a class="flex justify-center items-center h-full px-4 bg-gray-700 hover:bg-gray-500" href="#">Odhlásiť sa</a>
 				</div>
 			</div>
 		</div>
 	</header>
 
 	<div class="flex h-screen">		
-		<aside class="nav-wrap fixed left-0 top-12 z-10 lg:flex flex-col w-full lg:w-60 lg:pt-10 h-screen bg-secondary text-white">
+		<aside class="nav-wrap fixed left-0 top-12 z-10 lg:flex flex-col w-full lg:w-60 lg:pt-10 h-screen bg-gray-400 text-white">
 			<div class="sub-nav-wrap w-[200%] flex lg:w-full">
 				<div class="flex-1">
 					<!--<form class="mt-5 mb-2 mx-4" action="/">
