--- a/wp-content/themes/wp-dashboard/html/src/index.html
+++ b/wp-content/themes/wp-dashboard/html/src/index.html
@@ -20,7 +20,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,400;0,600;1,400;1,600&display=swap" rel="stylesheet">
 </head>
-<body>
+<body class="administrator">
     <header class="fixed top-0 left-0 z-20 flex w-full bg-quaternary h-12 text-white">
 		<div class="flex justify-between lg:justify-center items-center w-full lg:w-60 p-3 bg-primary">
 			<a href="#"><img src="./assets/img/logo.svg" width="160" height="50" alt=""></a>
@@ -56,14 +56,14 @@
 					</form>-->
 
 					<ul class="left-nav lg:pt-5">
-						<li><a href="#">Aktuality</a></li>
+						<li class="aa-student"><a href="#">Aktuality</a></li>
 						<li><a href="#">Zamestnanecký portál</a></li>
 						<li><a href="#">Onboarding</a></li>
 						<li class="current-menu-parent"><a href="#">Užitočné informácie</a>
-							<ul>
-								<li><a href="#">Dovolenky</a></li>
-								<li><a href="#">Vnútorný predpis</a></li>
-								<li><a href="#">Cestovný príkaz - postup</a></li>
+							<ul class="sub-menu">
+								<li class="aa-tpp"><a href="#">Dovolenky</a></li>
+								<li class="aa-zl"><a href="#">Vnútorný predpis</a></li>
+								<li class="aa-sro"><a href="#">Cestovný príkaz - postup</a></li>
 								<li class="current-menu-item"><a href="#">Služobné cesty</a></li>
 								<li><a href="#">Info o spracovaní osobných údajov</a></li>
 								<li><a href="#">Edumio školenia</a></li>
