--- a/wp-content/themes/wp-dashboard/html/src/page.html
+++ b/wp-content/themes/wp-dashboard/html/src/page.html
@@ -240,7 +240,7 @@
                 </div>
 
                 <div class="mt-20">
-                    <a class="btn px-8 py-4 rounded-lg bg-primary hover:bg-secondary text-white font-semibold tracking-wide no-underline" href="#">späť na Aktuality</a>
+                    <a class="btn px-8 py-4 border-2 border-primary rounded-lg bg-white hover:bg-quaternary text-primary font-semibold tracking-wide no-underline" href="#">späť na Aktuality</a>
                 </div>
 
 				<footer class="mt-auto pt-10 pb-4">
