--- a/wp-content/themes/wp-dashboard/html/src/index.html
+++ b/wp-content/themes/wp-dashboard/html/src/index.html
@@ -21,6 +21,9 @@
 	<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,400;0,600;1,400;1,600&display=swap" rel="stylesheet">
 </head>
 <body class="administrator">
+	<div class="extraCss max-h-full text-center"></div>
+
+
     <header class="fixed top-0 left-0 z-20 flex w-full bg-black h-12 text-white">
 		<div class="flex justify-between lg:justify-center items-center w-full lg:w-60 p-3 pr-5 bg-primary">
 			<a href="#"><img src="./assets/img/logo.svg" width="160" height="50" alt=""></a>
