--- a/wp-content/themes/wp-dashboard/html/src/page.html
+++ b/wp-content/themes/wp-dashboard/html/src/page.html
@@ -50,7 +50,7 @@
 			<div class="sub-nav-wrap w-[200%] flex lg:w-full">
 				<div class="flex-1">
 					<form class="mt-8 lg:-mt-2 mb-10 mx-4" action="/">
-						<input class="w-full py-2 pl-5 pr-20 border-primary focus:border-quaternary focus:ring-primary bg-green rounded-full text-lg bg-[url('/assets/img/icn-search.svg')] bg-no-repeat bg-right bg-[length:60px_30px]" type="text" placeholder="čo hľadáte?">
+						<input class="w-full py-2 pl-5 pr-10 lg:pr-20 border-primary focus:border-quaternary focus:ring-primary bg-green rounded-full text-lg bg-[url('/assets/img/icn-search.svg')] bg-no-repeat bg-right bg-[length:60px_30px]" type="text" placeholder="čo hľadáte?">
 					</form>
 
 					<p class="hidden lg:block pb-1 mx-4 border-b border-gray-300 border-dotted font-bold tracking-wide text-sm text-gray-300 uppercase">Menu:</p>
