--- a/wp-content/themes/wp-dashboard/html/src/page.html
+++ b/wp-content/themes/wp-dashboard/html/src/page.html
@@ -173,6 +173,41 @@
                     <p>Vďaka BPM zefektívnite celý pracovný proces od jeho počiatočnej fázy až po kontrolu a analýzu celého projektu. Správnym zadefinovaním pracovného postupu dokážete rýchlejšie a jednoduchšie reagovať na akúkoľvek zmenu, ktorá vo vašej firme alebo odvetví nastane. <a href="#">Výhody služby Procesná automatizácia</a></p>
 
                     <h3>Konkurenčná výhoda</h3>
+
+					<div class="form-wrap">
+						<p><span id="wpcf7-622b435b739b7-wrapper" class="wpcf7-form-control-wrap work-679-wrap"><label for="wpcf7-622b435b739b7-field" class="hp-message">Please leave this field empty.</label><input id="wpcf7-622b435b739b7-field" class="wpcf7-form-control wpcf7-text" type="text" name="work-679" value="" size="40" tabindex="-1" autocomplete="new-password"></span><br>
+						<span id="wpcf7-622b435b73a2a-wrapper" class="wpcf7-form-control-wrap surname-679-wrap"><label for="wpcf7-622b435b73a2a-field" class="hp-message">Please leave this field empty.</label><input id="wpcf7-622b435b73a2a-field" class="wpcf7-form-control wpcf7-text" type="text" name="surname-679" value="" size="40" tabindex="-1" autocomplete="new-password"></span></p>
+						<input type="hidden" name="referral" value="peter@inovative.sk" class="wpcf7-form-control wpcf7-hidden" id="referral">
+						<div class="flex flex-col lg:flex-row justify-center lg:items-center mb-2 -mx-2">
+						<div class="flex-1 mb-2 lg:mb-0 mx-2">
+								<label class="flex pl-3 mb-2 text-sm font-semibold">Koho odporúčaš? <span class="px-1 text-secondary"> * </span></label><p></p>
+						<p>        <span class="wpcf7-form-control-wrap applicant"><input type="text" name="applicant" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required input" aria-required="true" aria-invalid="false" placeholder="&nbsp;"></span>
+							</p></div>
+						<div class="flex-1 mb-2 lg:mb-0 mx-2">
+						</div>
+						</div>
+						<div class="flex lg:items-center mb-2 -mx-2">
+						<div class="flex-1 mb-2 lg:mb-0 mx-2">
+								<label class="flex pl-3 mb-2 text-sm font-semibold"> Tel.číslo <span class="px-1 text-secondary"> * </span></label><p></p>
+						<p>        <span class="wpcf7-form-control-wrap phone_number"><input type="text" name="phone_number" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required input" aria-required="true" aria-invalid="false" placeholder="&nbsp;"></span>
+							</p></div>
+						<div class="flex-1 mb-2 lg:mb-0 mx-2">
+								<label class="flex pl-3 mb-2 text-sm font-semibold" for=""> Email <span class="px-1 text-secondary"> * </span></label><p></p>
+						<p>        <span class="wpcf7-form-control-wrap email"><input type="email" name="email" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-email wpcf7-validates-as-required wpcf7-validates-as-email input" aria-required="true" aria-invalid="false" placeholder="&nbsp;"></span>
+							</p></div>
+						</div>
+						<div class="mb-2">
+							<label class="flex pl-3 mb-2 text-sm font-semibold">Napíš niečo o ňom <span class="px-1 text-secondary"> * </span></label><p></p>
+						<p>    <span class="wpcf7-form-control-wrap about"><textarea name="about" cols="40" rows="10" class="wpcf7-form-control wpcf7-textarea wpcf7-validates-as-required input" aria-required="true" aria-invalid="false" placeholder="&nbsp;"></textarea></span>
+						</p></div>
+						<div class="mb-2">
+							<label class="flex pl-3 mb-2 text-sm font-semibold" for=""><span>Životopis</span> <span class="px-1 text-secondary"> * </span> (max.500kB)</label><p></p>
+						<p>   <span class="wpcf7-form-control-wrap cv"><input type="file" name="cv" size="40" class="wpcf7-form-control wpcf7-file wpcf7-validates-as-required inputfile" id="cv" accept=".pdf,.doc,.docx" aria-required="true" aria-invalid="false"></span>
+						</p></div>
+						<div class="flex justify-center align-center">
+							<button class="inline-flex justify-center items-center min-w-[250px] px-8 py-4 rounded-full bg-primary hover:bg-white hover:text-primary focus:bg-green text-white font-semibold transition-colors" type="submit">Odoslať</button>
+						</div>
+						</div>
                     
                     <p>Rozpoznajte vďaka správne nastaveným firemným procesom budúce príležitosti na vašom trhu a reagujte na akúkoľvek zmenu rýchlejšie než vaša konkurencia.</p>
 
