--- a/wp-content/themes/wp-dashboard/html/src/index.html
+++ b/wp-content/themes/wp-dashboard/html/src/index.html
@@ -50,10 +50,12 @@
 		<aside class="nav-wrap fixed left-0 top-12 z-10 lg:flex flex-col w-full lg:w-60 lg:pt-10 h-screen bg-neutral-100 text-primary">
 			<div class="sub-nav-wrap w-[200%] flex lg:w-full">
 				<div class="flex-1">
-					<!--<form class="mt-5 mb-2 mx-4" action="/">
-						<input class="w-full py-2 pl-5 pr-20 border-primary focus:border-quaternary focus:ring-primary bg-green rounded-full text-lg bg-[url('/assets/img/icn-search.svg')] bg-no-repeat bg-right bg-[length:60px_30px]" type="text" placeholder="čo hľadáte?">
-					</form>-->
-
+					<div class="mb-8 h-[46px]">
+						<form class="mt-8 lg:mt-0 mx-4" action="/">
+							<input class="w-full py-2 pl-5 pr-10 lg:pr-20 border-primary focus:border-quaternary focus:ring-primary bg-green rounded-full text-lg bg-[url('/assets/img/icn-search.svg')] bg-no-repeat bg-right bg-[length:60px_30px]" type="search" placeholder="čo hľadáte?">
+						</form>
+					</div>
+						
 					<ul class="left-nav lg:pt-2">
 						<li class="aa-student"><a href="#">Aktuality</a></li>
 						<li><a href="#">Zamestnanecký portál</a></li>
