--- a/wp-content/themes/wp-dashboard/html/src/page.html
+++ b/wp-content/themes/wp-dashboard/html/src/page.html
@@ -125,6 +125,32 @@
 		</aside>
 
 		<main class="flex-1 lg:ml-60 px-4 lg:px-8 pt-20">
+			<div class="container border-neutral-500 border-b border-dotted mb-8 lg:mb-16">
+				<div class="flex flex-col lg:flex-row lg:items-center">
+					<div class="px-8 mb-4 lg:mb-0">
+						<img src="assets/img/Ikona.svg" alt="">
+					</div>
+					
+					<div class="mb-8 lg:mb-0">
+						<h1 class="text-4xl lg:text-6xl text-primary">Benefity v Aardwarku</h1>
+					</div>
+				</div>
+			</div>
+
+			<div class="container">
+				<div class="flex flex-wrap -mx-2 mb-8">
+					<section class="sm:w-1/2 lg:w-1/4 px-4 mx-2 mb-8">
+						<a class="flex justify-between hover:text-primary" href="#">
+							<span class="text-xl">Nárok na HW</span>
+
+							<span class="flex items-center justify-center w-8 h-8 border border-gray-200 rounded-full">
+								<img  src="assets/img/Arrow.svg" alt="">
+							</span>
+						</a>
+					</section>
+				</div>
+			</div>
+
 			<div class="bg-primary px-4 lg:px-8 rounded-lg">
 				<div class="container mx-auto">
 					<div class="flex flex-col lg:flex-row lg:h-[480px]">
