--- a/wp-content/themes/wp-dashboard/html/src/index.html
+++ b/wp-content/themes/wp-dashboard/html/src/index.html
@@ -41,7 +41,7 @@
 			<div class="flex justify-end items-center w-full h-full px-8">
 				<p class="mr-1 text-primary">Prihlásený: <strong class="tracking-wide">Peter Stehlík</strong> |</p>
 
-				<a class="tracking-wide text-sm" href="#">Odhlásiť</a>
+				<a class="tracking-wide text-sm hover:text-green" href="#">Odhlásiť</a>
 			</div>
 		</div>
 	</header>
