--- a/wp-content/themes/wp-dashboard/html/src/page.html
+++ b/wp-content/themes/wp-dashboard/html/src/page.html
@@ -132,7 +132,7 @@
 					</div>
 					
 					<div class="mb-8 lg:mb-0">
-						<h1 class="text-4xl lg:text-6xl text-primary">Benefity v Aardwarku</h1>
+						<h1 class="py-2 text-4xl lg:text-6xl text-primary">Benefity v Aardwarku</h1>
 					</div>
 				</div>
 			</div>
@@ -141,9 +141,9 @@
 				<div class="flex flex-wrap -mx-2 mb-8">
 					<section class="sm:w-1/2 lg:w-1/4 px-4 mx-2 mb-8">
 						<a class="flex justify-between hover:text-primary" href="#">
-							<span class="text-xl">Nárok na HW</span>
+							<span class="pr-4 text-xl">Nárok na HW</span>
 
-							<span class="flex items-center justify-center w-8 h-8 border border-gray-200 rounded-full">
+							<span class="flex items-center justify-center w-8 min-w-[2rem] h-8 border border-gray-200 rounded-full">
 								<img  src="assets/img/Arrow.svg" alt="">
 							</span>
 						</a>
