--- a/wp-content/themes/wp-dashboard/html/src/page.html
+++ b/wp-content/themes/wp-dashboard/html/src/page.html
@@ -127,11 +127,11 @@
 		<main class="flex-1 lg:ml-60 px-4 lg:px-8 pt-20">
 			<div class="container border-neutral-500 border-b border-dotted mb-8 lg:mb-16">
 				<div class="flex flex-col lg:flex-row lg:items-center">
-					<div class="px-8 mb-4 lg:mb-0">
+					<div class="pl-8 mb-4 lg:mb-0">
 						<img src="assets/img/Ikona.svg" alt="">
 					</div>
 					
-					<div class="mb-8 lg:mb-0">
+					<div class="ml-8 mb-8 lg:mb-0">
 						<h1 class="py-2 text-4xl lg:text-6xl text-primary">Benefity v Aardwarku</h1>
 					</div>
 				</div>
