--- a/wp-content/themes/wp-dashboard/html/src/page.html
+++ b/wp-content/themes/wp-dashboard/html/src/page.html
@@ -322,7 +322,7 @@
                     </div>
                 </div>
 
-                <div class="mt-20">
+                <div class="mt-20 mb-8 lg:mb-96">
                     <a class="btn px-8 py-4 border-2 border-primary rounded-lg bg-white hover:bg-quaternary text-primary font-semibold tracking-wide no-underline" href="#">späť na Aktuality</a>
                 </div>
 
