--- a/wp-content/themes/wp-dashboard/html/src/time.html
+++ b/wp-content/themes/wp-dashboard/html/src/time.html
@@ -137,17 +137,18 @@
 						<span class="absolute top-1/2 -right-8 md:-right-10 w-4 h-4 rounded-full border-2 border-gray-100 md:-translate-y-2 md:translate-x-px bg-quaternary"></span>
 					</section>
 
-					<section class="relative w-11/12 md:max-w-xs p-4 border border-gray-300 rounded-lg mt-8 md:ml-96 shadow-lg bg-white text-right md:text-left">
-						<h2 class="mb-2 font-bold text-xl text-primary">2021</h2>
+					<section class="relative w-11/12 md:max-w-xs rounded-lg mt-8 md:ml-96 shadow-lg bg-white text-right md:text-left">
+						<a href="#">
+							<img class="rounded-lg rounded-b-none object-cover max-h-56" src="assets/img/Aardwark-006.jpg" alt="" width="320" height="214">
+						</a>
 
-						<ul class="ml-4 list-disc">
-							<li class="mb-1"><a class="border-b hover:border-0 border-black" href="#">Vianočný prípitok</a></li>
-							<li class="mb-1"><a class="border-b hover:border-0 border-black" href="#">Aardwark Mikuláš</a></li>
-							<li class="mb-1"><a class="border-b hover:border-0 border-black" href="#">Novembrové raňajky</a></li>
-							<li class="mb-1"><a class="border-b hover:border-0 border-black" href="#">Októbrové raňajky</a></li>
-							<li class="mb-1"><a class="border-b hover:border-0 border-black" href="#">Na koncerte vážnej hudby</a></li>
-							<li class="mb-1"><a class="border-b hover:border-0 border-black" href="#">Spoločné fotenie</a></li>
-						</ul>
+						<div class="p-4">
+							<h2 class="font-bold text-xl text-primary">
+								<a href="#">Vianočný prípitok</a>
+							</h2>
+
+							<a class="text-sm text-gray-500" href="#">marec 2020</a>
+						</div>
 
 						<span class="absolute top-1/2 -right-8 md:-left-10 w-4 h-4 rounded-full border-2 border-gray-100 md:-translate-y-2 md:-translate-x-px bg-quaternary"></span>
 					</section>
