--- a/wp-content/themes/wp-dashboard/html/src/index.html
+++ b/wp-content/themes/wp-dashboard/html/src/index.html
@@ -60,7 +60,7 @@
 						<li class="aa-student"><a href="#">Aktuality</a></li>
 						<li><a href="#">Zamestnanecký portál</a></li>
 						<li><a href="#">Onboarding</a></li>
-						<li class="current-menu-parent menu-item-has-children"><a href="#">Užitočné informácie</a>
+						<li class="align-middle current-menu-parent menu-item-has-children"><a href="#">Užitočné informácie</a>
 							<ul class="sub-menu">
 								<li class="aa-tpp"><a href="#">Dovolenky</a></li>
 								<li class="aa-zl"><a href="#">Vnútorný predpis</a></li>
