--- a/wp-content/themes/wp-dashboard/html/src/page.html
+++ b/wp-content/themes/wp-dashboard/html/src/page.html
@@ -144,6 +144,12 @@
 							<span class="text-xl">Nárok na HW</span>
 						</a>
 					</section>
+
+					<section class="sm:w-1/2 lg:w-1/4 px-4 mx-2 mb-8">
+						<a class="flex justify-center p-4 bg-white rounded-lg hover:bg-green hover:text-white text-center" href="#">
+							<span class="text-xl">Nárok na HW Vzdelávanie celozivotne</span>
+						</a>
+					</section>
 				</div>
 			</div>
 
