priprava na preklad

--- a/wp-content/themes/wp-dashboard/html/src/page.html
+++ b/wp-content/themes/wp-dashboard/html/src/page.html
@@ -20,7 +20,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,400;0,600;1,400;1,600&display=swap" rel="stylesheet">
 </head>
-<body class="administrator">
+<body class="administrator bg-slate-400">
     <header class="fixed top-0 left-0 z-20 flex w-full bg-black h-12 text-white">
 		<div class="flex justify-between lg:justify-center items-center w-full lg:w-60 p-3 bg-primary">
 			<a href="#"><img src="./assets/img/logo.svg" width="160" height="50" alt=""></a>
@@ -140,14 +140,38 @@
 			<div class="container">
 				<div class="flex flex-wrap -mx-2 mb-8">
 					<section class="sm:w-1/2 lg:w-1/4 px-4 mx-2 mb-8">
-						<a class="flex justify-center p-4 bg-white rounded-lg hover:bg-green hover:text-white" href="#">
-							<span class="text-xl">Nárok na HW</span>
+						<a class="flex items-center justify-center h-full min-h-[100px] px-4 py-2 bg-white rounded-lg hover:bg-green hover:text-white text-center" href="#">
+							<span class="text-lg">Nárok na HW</span>
 						</a>
 					</section>
 
 					<section class="sm:w-1/2 lg:w-1/4 px-4 mx-2 mb-8">
-						<a class="flex justify-center p-4 bg-white rounded-lg hover:bg-green hover:text-white text-center" href="#">
-							<span class="text-xl">Nárok na HW Vzdelávanie celozivotne</span>
+						<a class="flex items-center justify-center h-full min-h-[100px] px-4 py-2 bg-white rounded-lg hover:bg-green hover:text-white text-center" href="#">
+							<span class="text-lg">Nárok na HW Vzdelávanie celozivotne</span>
+						</a>
+					</section>
+
+					<section class="sm:w-1/2 lg:w-1/4 px-4 mx-2 mb-8">
+						<a class="flex items-center justify-center h-full min-h-[100px] px-4 py-2 bg-white rounded-lg hover:bg-green hover:text-white text-center" href="#">
+							<span class="text-lg">Nárok na HW ale iba poriadne nadupaný softvér</span>
+						</a>
+					</section>
+
+					<section class="sm:w-1/2 lg:w-1/4 px-4 mx-2 mb-8">
+						<a class="flex items-center justify-center h-full min-h-[100px] px-4 py-2 bg-white rounded-lg hover:bg-green hover:text-white text-center" href="#">
+							<span class="text-lg">Nárok na HW Vzdelávanie celozivotne</span>
+						</a>
+					</section>
+
+					<section class="sm:w-1/2 lg:w-1/4 px-4 mx-2 mb-8">
+						<a class="flex items-center justify-center h-full min-h-[100px] px-4 py-2 bg-white rounded-lg hover:bg-green hover:text-white text-center" href="#">
+							<span class="text-lg">Nárok na HW ale iba poriadne nadupaný SW</span>
+						</a>
+					</section>
+
+					<section class="sm:w-1/2 lg:w-1/4 px-4 mx-2 mb-8">
+						<a class="flex items-center justify-center h-full min-h-[100px] px-4 py-2 bg-white rounded-lg hover:bg-green hover:text-white text-center" href="#">
+							<span class="text-lg">Nárok na HW Vzdelávanie celozivotne</span>
 						</a>
 					</section>
 				</div>
