--- a/wp-content/themes/wp-dashboard/html/src/index.html
+++ b/wp-content/themes/wp-dashboard/html/src/index.html
@@ -21,7 +21,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,400;0,600;1,400;1,600&display=swap" rel="stylesheet">
 </head>
 <body class="administrator">
-	<div class="extraCss max-h-full text-center xl:pr-8 uppercase cursor-default text-black font-semibold"></div>
+	<div class="extraCss max-h-full text-center xl:pr-8 uppercase cursor-default text-black font-semibold xl:mb-8 2xl:mb-8 xl:mt-0 2xl:pt-10"></div>
 
 
     <header class="fixed top-0 left-0 z-20 flex w-full bg-neutral-100 h-12 text-primary">
@@ -47,18 +47,29 @@
 	</header>
 
 	<div class="flex">		
-		<aside class="nav-wrap fixed left-0 top-12 z-10 xl:flex flex-col w-full xl:w-60 xl:pt-10 h-screen bg-neutral-100 text-primary">
-			<div class="sub-nav-wrap w-[200%] flex xl:w-full">
-				<div class="flex-1">
-					<div class="mb-8 h-[46px]">
+		<aside class="nav-wrap fixed left-0 top-12 z-50 xl:flex flex-col w-full xl:w-60 h-screen bg-neutral-100 text-primary">
+			<div class="sub-nav-wrap flex w-[200%] xl:w-full">
+				<div class="flex-1 h-screen overflow-y-scroll">
+					<div class="mb-4 xl:mb-8 h-[46px] xl:pt-10">
 						<form class="mt-8 xl:mt-0 mx-4" action="/">
 							<input class="w-full py-2 pl-5 pr-10 xl:pr-20 border-primary focus:border-quaternary focus:ring-primary bg-green rounded-full text-lg bg-[url('/assets/img/icn-search.svg')] bg-no-repeat bg-right bg-[length:60px_30px]" type="search" placeholder="čo hľadáte?">
 						</form>
 					</div>
 						
-					<ul class="left-nav xl:pt-2">
+					<ul class="left-nav xl:pt-4 xl:mb-20" id="mainNav">
+						<li class="aa-student"><a href="#">Aktuality</a></li>
+						<li class="aa-student"><a href="#">Aktuality</a></li>
+						<li class="aa-student"><a href="#">Aktuality</a></li>
 						<li class="aa-student"><a href="#">Aktuality</a></li>
 						<li><a href="#">Zamestnanecký portál</a></li>
+						<li><a href="#">Zamestnanecký portál</a></li>
+						<li><a href="#">Zamestnanecký portál</a></li>
+						<li><a href="#">Zamestnanecký portál</a></li>
+						<li><a href="#">Zamestnanecký portál</a></li>
+						<li><a href="#">Onboarding</a></li>
+						<li><a href="#">Onboarding</a></li>
+						<li><a href="#">Onboarding</a></li>
+						<li><a href="#">Onboarding</a></li>
 						<li><a href="#">Onboarding</a></li>
 						<li class="align-middle current-menu-parent menu-item-has-children"><a href="#">Užitočné informácie</a>
 							<ul class="sub-menu">
@@ -118,6 +129,10 @@
 		</aside>
 
 		<main class="relative flex-1 min-h-[85vh] xl:ml-60 px-4 xl:px-16 pt-20">
+			<div class="hidden fixed left-60 top-12 z-10 flex flex-col justify-start pt-8 xl:w-60 xl:h-screen bg-green overflow-auto pb-16" id="mainSubNavWrap">
+				<ul id="mainSubNav"></ul>
+			</div>
+
 			<div class="mb-8">
 				<div class="container">
 					<div class="flex flex-col xl:flex-row">
