--- a/wp-content/themes/wp-dashboard/html/src/index.html
+++ b/wp-content/themes/wp-dashboard/html/src/index.html
@@ -52,7 +52,7 @@
 				<div class="flex-1 h-screen overflow-y-scroll">
 					<div class="mb-4 xl:mb-8 h-[46px] xl:pt-10">
 						<form class="mt-8 xl:mt-0 mx-4" action="/">
-							<input class="w-full py-2 pl-5 pr-10 xl:pr-20 border-primary focus:border-quaternary focus:ring-primary bg-green rounded-full text-lg bg-[url('/assets/img/icn-search.svg')] bg-no-repeat bg-right bg-[length:60px_30px]" type="search" placeholder="čo hľadáte?">
+							<input class="w-full py-2 pl-5 pr-10 xl:pr-20 border-primary focus:border-quaternary focus:ring-0 bg-green rounded-full text-lg bg-[url('/assets/img/icn-search.svg')] bg-no-repeat bg-right bg-[length:60px_30px]" type="search" placeholder="čo hľadáte?">
 						</form>
 					</div>
 						
@@ -129,8 +129,8 @@
 		</aside>
 
 		<main class="relative flex-1 min-h-[85vh] xl:ml-60 px-4 xl:px-16 pt-20">
-			<div class="hidden fixed left-60 top-12 z-10 flex flex-col justify-start pt-8 xl:w-60 xl:h-screen bg-green overflow-auto pb-16" id="mainSubNavWrap">
-				<ul id="mainSubNav"></ul>
+			<div class="hidden fixed left-60 top-12 z-10 flex flex-col justify-center pt-8 xl:w-60 xl:h-screen bg-transparent overflow-auto pb-16" id="mainSubNavWrap">
+				<ul class="py-36 mt-3 bg-green" id="mainSubNav"></ul>
 			</div>
 
 			<div class="mb-8">
